Add typecheck and libpath commands to cli